Fixes the issue where a container div around the map is setting the text-align to something other than 'left'. for openlayers to work, the text-align for the viewport *must* be set to 'left', so we specify that in the default style.css. (Closes #1116)
git-svn-id: http://svn.openlayers.org/trunk/openlayers@7576 dc9f47b5-9b13-0410-9fdd-eb0c1a62fdaf

--- a/theme/default/style.css
+++ b/theme/default/style.css
@@ -1,6 +1,9 @@
+div.olMapViewport {
+    text-align: left;
+}
+
 div.olLayerDiv {
    -moz-user-select: none;
-   text-align: left;
 }
 
 .olLayerGoogleCopyright {
